# Files

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  fetch_repos.py  lv_conf.h  repos.json
.github/workflows/: cp0-package.yml
packaging/deb/: files.desktop.in  package_deb.sh
src/: main.cpp
src/assets/: assets.h  convert_fonts.py  font_assets.cpp  font_assets.hpp
src/assets/fonts/NotoSans/: font_config.json
src/assets/res_c/: font_noto_sans_jp_semibold_10.c  font_noto_sans_jp_semibold_12.c  font_noto_sans_jp_semibold_14.c  font_noto_sans_mono_semibold_12.c  font_noto_sans_mono_semibold_14.c  font_noto_sans_sc_semibold_10.c  font_noto_sans_sc_semibold_12.c  font_noto_sans_sc_semibold_14.c
src/core/: files_app.cpp  files_app.hpp  files_config.cpp  files_config.hpp  files_router.cpp  files_router.hpp  files_types.cpp  files_types.hpp
src/hal/: files_lvgl_hal.cpp  files_lvgl_hal.hpp
src/input/: files_keypad.cpp  files_keypad.hpp
src/models/: file_browser_model.cpp  file_browser_model.hpp  file_preview_model.cpp  file_preview_model.hpp  file_type_registry.cpp  file_type_registry.hpp  files_model.cpp  files_model.hpp  filesystem_transfer.cpp  filesystem_transfer.hpp
src/preview/: preview_support.cpp  preview_support.hpp
src/preview/audio/: audio_preview.cpp  audio_preview.hpp  audio_preview_model.cpp  audio_preview_model.hpp  audio_preview_types.hpp  audio_preview_view.cpp  audio_preview_view.hpp  audio_preview_view_model.cpp  audio_preview_view_model.hpp
src/preview/common/: bottom_key_bar.cpp  bottom_key_bar.hpp
src/preview/image/: image_preview.cpp  image_preview.hpp  jpeg_decoder.cpp  jpeg_decoder.hpp
src/preview/info/: info_preview.cpp  info_preview.hpp
src/preview/text/: text_preview.cpp  text_preview.hpp
src/preview/video/: video_preview.cpp  video_preview.hpp
src/view_models/: browser_view_model.cpp  browser_view_model.hpp  preview_view_model.cpp  preview_view_model.hpp  view_model.hpp
src/views/: browser_view.cpp  browser_view.hpp  magic_view.cpp  magic_view.hpp  preview_view.cpp  preview_view.hpp  view.hpp
tests/: filesystem_transfer_test.cpp  jpeg_decoder_test.cpp
